src/objects/cwbtool__AnalysisSummary__c.object
<CustomObject>
    <fields>
        <fullName>cwbtool__AnalysisLink__c</fullName>
        <formula>HYPERLINK(&quot;/apex/cwbtool__ImpactAnalysis?savedAnalysisId=&quot;+ Id, &quot;Click here to view analysis&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Analysis Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__BatchID__c</fullName>
        <label>Batch ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__ErrorDetail__c</fullName>
        <label>Error Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cwbtool__ExportToPDF__c</fullName>
        <formula>HYPERLINK(&quot;/apex/cwbtool__ExportToPDF?savedAnalysisId=&quot;+ Id, &quot;Export To PDF&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Export To PDF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Export_to_Excel__c</fullName>
        <formula>HYPERLINK(&quot;/apex/cwbtool__ImpactAnalysisExportToExcel?savedAnalysisId=&quot;+ Id, &quot;Export To Excel&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Export to Excel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__ObjectUniqueReference__c</fullName>
        <label>Object Unique Reference</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cwbtool__Object__c</fullName>
        <label>Object</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__PicklistValue__c</fullName>
        <label>Picklist Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Search_Type__c</fullName>
        <label>Search Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom Field References</fullName>
                    <default>true</default>
                    <label>Custom Field References</label>
                </value>
                <value>
                    <fullName>Object References</fullName>
                </value>
                <value>
                    <fullName>Label References</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cwbtool__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cwbtool__Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <label>Analysis Summary</label>
    <listViews>
        <fullName>cwbtool__All</fullName>
        <columns>cwbtool__Status__c</columns>
        <columns>cwbtool__Search_Type__c</columns>
        <columns>NAME</columns>
        <columns>cwbtool__Object__c</columns>
        <columns>cwbtool__Field__c</columns>
        <columns>cwbtool__AnalysisLink__c</columns>
        <columns>cwbtool__ExportToPDF__c</columns>
        <columns>cwbtool__Export_to_Excel__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>cwbtool__Summary__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS-{0000}</displayFormat>
        <label>Analysis Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Analysis Summary</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>